Fix 26.2 server clocks, addon block entities and web map lifecycle